--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                 <h2>Curso de Html5 com CSS3</h2>
                 <img class="lado" src="imagens/curso-html-css.png" alt="Curso Html">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsa dolor obcaecati nihil voluptates animi repellat pariatur vel corrupti commodi, amet voluptate cum ullam tempora quas laboriosam nemo nesciunt ipsum.</p>
-                <p><a href="clique aqui"></a> Acesse o curso de html</p>
+                <p><a href="imagens/curso-html.html">Acesse o curso de Html5</a></p>
             </article>
             <article>
                 <h2>Curso de Javascript</h2>
                 <img class="lado" src="imagens/curso-javascript.png" alt="Curso Javascript">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sit ratione quisquam repudiandae ad quaerat aspernatur illum impedit laborum aliquid tempora id nihil facilis earum error, tempore enim ea et?</p>
-                <p><a href=""></a> Acesse o curso de Javascript</p>
+                <p><a href="imagens/curso-js.html">Acesse o curso de Javascript</a></p>
             </article>
         </header>
     </main>
